Added a possible solution for the 6.5.2.6

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,1 @@
-
-.idea/.idea.PRDAT-Assignments.dir/.idea/indexLayout.xml
-.idea/.idea.PRDAT-Assignments.dir/.idea/projectSettingsUpdater.xml
-.idea/.idea.PRDAT-Assignments.dir/.idea/workspace.xml
+.idea/.idea.PRDAT-Assignments.dir/.idea/*
